--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Nombre y Apellido(s)">
 
     <!--Sustituir por los datos del alumno-->
-    <title>Nombre y Apellido(s)</title>
+    <title>Hector Clemente Fernandez</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,7 +17,7 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Nombre y Apellido(s) <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>Hector Clemente Fernandez <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
         Posición<br>
@@ -26,7 +26,7 @@
       </p>
       <address>
         <!--Sustituir por los datos del alumno-->
-        <span class='glyphicon glyphicon-pencil'></span> correo [at] dominio <br>
+        <span class='glyphicon glyphicon-pencil'></span> hclemenf@gmail.com <br>
       </address>
 
       <!--Sustituir por los datos del alumno-->
@@ -55,7 +55,7 @@
 
       <footer class="footer">
         <!--Sustituir por los datos del alumno-->
-        <p>&copy; Nombre y Apellido(s) - 2017</p>
+        <p>&copy; Hector Clemente Fernandez - 2018</p>
       </footer>
 
     </div>
