--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Hector Clemente Fernandez <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>GUSTAVO <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/gustavo.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
-        Posición<br>
-        Departamento<br>
-        Organización
+        Reportero<br>
+        Dicharachero<br>
+        Barrio Sésamo
       </p>
       <address>
         <!--Sustituir por los datos del alumno-->
@@ -55,7 +55,7 @@
 
       <footer class="footer">
         <!--Sustituir por los datos del alumno-->
-        <p>&copy; Hector Clemente Fernandez - 2018</p>
+        <p>&copy; Héctor Clemente Fernández - 2018</p>
       </footer>
 
     </div>
