--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Héctor Clemente Fernández <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/gustavo.png" align="right"></span></h3>
+      <h3>GUSTAVO <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/gustavo.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
-        Posición<br>
-        Departamento<br>
-        Organización
+        Reportero<br>
+        Dicharachero<br>
+        Barrio Sésamo
       </p>
       <address>
         <!--Sustituir por los datos del alumno-->
-        <span class='glyphicon glyphicon-pencil'></span> hclemenf@gmail.com <br>
+        <span class='glyphicon glyphicon-pencil'></span> hclemenf@me.com <br>
       </address>
 
       <!--Sustituir por los datos del alumno-->
